--- a/NLP_Sentiment_Analysis_Model.ipynb
+++ b/NLP_Sentiment_Analysis_Model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPL7UQS/oSZC6FpvTcouxMn",
+      "authorship_tag": "ABX9TyMi6zngaJRBhQTHEOTNFkHj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,11 +221,12 @@
         "model = BertForSequenceClassification.from_pretrained( \"bert-base-uncased\", num_labels = 3, output_attentions = False, output_hidden_states = False);\n",
         "\n",
         "#Specifying GPU usage for pytorch\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-        "n_gpu = torch.cuda.device_count()\n",
-        "\n",
-        "if tf.test.gpu_device_name() == '/device:GPU:0':\n",
-        "  model.cuda();"
+        "if torch.cuda.is_available():\n",
+        "  device = torch.device('cuda')\n",
+        "else:\n",
+        "  device = torch.device('cpu')\n",
+        "model.to(device)\n",
+        "n_gpu = torch.cuda.device_count()"
       ],
       "metadata": {
         "id": "43srcwiGT-0l"
